--- a/intro-dev-web/p1_lessons-learned/style.css
+++ b/intro-dev-web/p1_lessons-learned/style.css
@@ -1,14 +1,22 @@
-#menu ul {
-  padding: 0;
+body {
+  background-color: rgb(253 , 251 , 251);
+  border: 0;
+  font-family: 'Baloo Tamma 2', cursive;
   margin: 0;
+  padding: 0;
+}
+
+.menu ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .icones li {
-  display: inline;
+  display: inline-block;
 }
 
-#menu ul li {
+.menu ul li {
   display: inline;
 }
 
@@ -16,109 +24,107 @@ a {
   margin-left: 20px;
 }
 
-#menu ul li a {
-  text-decoration: none;
+.menu ul li a {
   color: white;
+  text-decoration: none;
 }
 
-#menu ul li a:hover {
-  text-decoration: none;
-  list-style: none;
-  color: white;
+.menu ul li a:hover {
   border-bottom: 2px solid red;
+  color: white;
+  list-style: none;
+  text-decoration: none;
 }
 
-body {
-  background-color: rgb(253 , 251 , 251);
-  margin: 0;
-  padding: 0;
-  font-family: 'Baloo Tamma 2', cursive;
-  border: 0;
-}
-
-#cabecalho {
+.cabecalho {
   background-color: green;
   margin: auto;
-  padding-bottom: 15px;
   position: fixed;
   width: 100%;
 }
 
-#titulo {
+.titulo {
   color: white;
+  font-size: 28px;
+  margin-left: 10px;
+  margin-right: 10px;
   text-align: center;
 }
 
-#minha_foto {
-  margin-top: 200px;
+.minha_foto {
+  border-radius: 10px 50px;
   margin-left: 20px;
-}
-
-h1 {
-  font-size: 50px;
+  margin-top: 115px;
 }
 
 h2 {
-  margin-top: 50px;
-  margin-bottom: 0;
   margin-left: 20px;
 }
 
 .container {
+  display: flex;
+  margin-bottom: auto;
+  margin-left: 40px;
   margin-top: 30px;
-  margin-left: 20px;
-  height: auto;
 }
 
-#licoes_aprendidas {
-  margin-top: 15px;
-  margin-left: 20px;
-  float: left;
-  line-height: 1.5em;
+.licoes_aprendidas {
   font-size: 15px;
+  line-height: 1.4em;
+  margin-left: 30px;
 }
 
-#licoes_a_aprender {
-  margin-top: 15px;
-  margin-left: 20px;
-  float: right;
-  width: 80%;
-  line-height: 1.5em;
+.licoes_a_aprender {
   font-size: 15px;
+  line-height: 1.4em;
+  margin-left: 40px;
+}
+
+.licoes {
+  font-size: 18px;
 }
 
 .container-dois {
-  margin-top: 30px;
-  margin-left: 20px;
-  height: auto;
+  display: flex;
+  margin-bottom: auto;
 }
 
 .lado-esquerdo {
+  font-size: 20px;
   line-height: 1.5em;
-  margin-top: 15px;
   margin-left: 20px;
-  margin-bottom: 100px;
-  float: left;
+  margin-top: 10px;
+  width: 65%;
 }
 
 .lado-direito {
+  color: darkslategray;
   line-height: 1.3em;
-  color: darkblue;
-  margin-top: 15px;
-  margin-left: 20px;
-  margin-bottom: 100px;
-  float: right;
-  width: 55%;
+  margin-left: 30px;
+  margin-top: 50px;
+  text-align: center;
+  width: 20%;
 }
 
-#rodape {
+.rodape {
+  background-color: darkgreen;
+  color: lightgrey;
+  font-family: arial, sans-serif;
+  font-size: 15px;
+  margin: auto;
   padding: 0;
-  margin: 0;
-  display: inline;
-  font-size: 5px;
+}
+
+.icones {
+  text-align: end;
+  width: 85%;
 }
 
 .final {
-  margin-left: 635px;
-  color: gray;
+  background-color: darkgreen;
+  color: lightgrey;
+  font-size: 13px;
+  margin: auto;
+  margin-left: 10px;
+  padding-bottom: 5px;
 }
